# XCLOpz

./: README.md  pyproject.toml
xclopz/: XCLOpz.py
