[tool.poetry]
name = "xclopz"
version = "1.0.1"
description = "Training and optimizing XGBoost, CatBoost, and LightGBM all-in-one."
authors = ["Duy Nguyen <duynguyen02.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.6.1"
xgboost = "^2.1.3"
lightgbm = "^4.5.0"
catboost = "^1.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
